[package]
name = "rawspeed-metadata-camerasxml_parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-metadata-colorfilterarray = { workspace = true }
rawspeed-metadata-xmlparser = { workspace = true }
rawspeed-std = { workspace = true }
rawspeed-std-ndslice = { workspace = true }

[dev-dependencies]

[lib]
path = "mod.rs"
bench = false
