[package]
name = "rawspeed-metadata-colorfilterarray"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-std = { workspace = true }
rawspeed-std-ndslice = { workspace = true }

[lib]
path = "mod.rs"
bench = false
