[package]
name = "rawspeed-metadata-xmltokendesparsifier"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-metadata-xmltokenizer = { path = "../xmltokenizer" }

[lib]
path = "mod.rs"
bench = false
